--- a/popup.html
+++ b/popup.html
@@ -17,6 +17,6 @@
     <input type="text" id="apiKeyInput" placeholder="Enter your Trello API Key">
     <button id="saveKeyBtn">Save API Key</button>
     <p id="status"></p>
-    <script src="popup.js" type="module"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
