--- a/src/popup.html
+++ b/src/popup.html
@@ -4,22 +4,330 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trello Extension Settings</title>
-    <style>body { font-family: sans-serif; padding: 10px; width: 300px; }
-        input[type="text"] { width: calc(100% - 22px); padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 4px; }
-        button { background-color: #007bff; color: white; padding: 10px 15px; border: none; border-radius: 4px; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
-        #status { margin-top: 10px; color: green; }</style>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            width: 600px; /* Fixed width for the popup */
+            overflow: hidden; /* Prevent body scrollbars */
+        }
+        :root {
+            --main-bg-color: #86cbf3; 
+            --text-color-light-bg: #172b4d;
+            --text-color-dark-bg: white;
+            --status-bg-color: rgba(255,255,255,0.8);
+            --board-block-bg: rgba(255,255,255,0.2);
+            --board-block-hover-bg: rgba(255,255,255,0.3);
+            --list-bg-color: #ebecf0;
+            --card-bg-color: #fff;
+            --add-btn-bg: #5aac44;
+            --add-btn-hover-bg: #61bd4f;
+            --delete-btn-bg: #eb5a46;
+            --delete-btn-hover-bg: #cf513d;
+            --status-success-color: green;
+            --status-error-color: red;
+            --input-border-color: #ccc;
+            --card-hover-bg-color: #f4f5f7;
+            --button-primary-bg: #e8f789;
+            --button-primary-hover-bg: #ecf4b9;
+        }
+
+        body[data-theme="dark"] {
+            --main-bg-color: #333; /* Dark mode background */
+            --text-color-light-bg: #e0e0e0;
+            --text-color-dark-bg: #e0e0e0;
+            --status-bg-color: rgba(0,0,0,0.6);
+            --board-block-bg: rgba(0,0,0,0.3);
+            --board-block-hover-bg: rgba(0,0,0,0.4);
+            --list-bg-color: #444;
+            --card-bg-color: #555;
+            --add-btn-bg: #3a8d2e;
+            --add-btn-hover-bg: #45a038;
+            --status-success-color: #90ee90; /* Light green for dark mode */
+            --status-error-color: #ff6347; /* Tomato for dark mode */
+            --input-border-color: #666;
+            --card-hover-bg-color: #666;
+            --delete-btn-bg: #c0392b;
+            --delete-btn-hover-bg: #a03022;
+            --button-primary-bg: #e8f789;
+            --button-primary-hover-bg: #ecf4b9;
+        }
+
+        #mainContainer {
+            padding: 10px;
+            min-height: 200px; /* Ensure some height */
+            background-color: var(--main-bg-color); /* Default Trello blue background */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            transition: background-image 0.3s ease-in-out, background-color 0.3s ease-in-out;
+            color: var(--text-color-dark-bg); /* Default text color for main container */
+            position: relative; /* For positioning settings button */
+        }
+        #mainContainer.light-text { /* This class is for when a board has a light background image */
+            color: var(--text-color-light-bg);
+        }
+        h1, h2, h3 {
+            color: inherit; /* Inherit color from mainContainer */
+        }
+        input[type="text"] {
+            width: calc(100% - 22px); /* adjusted for padding and border */
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid var(--input-border-color);
+            border-radius: 4px;
+            box-sizing: border-box;
+            background-color: var(--card-bg-color); /* Use theme variable */
+            color: var(--text-color-light-bg); /* Use theme variable */
+        }
+        button {
+            background-color: #007bff;
+            background-color: var(--button-primary-bg);
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+            box-sizing: border-box;
+        }
+        button:hover {
+            background-color: var(--button-primary-hover-bg);
+        }
+        #status {
+            margin-top: 10px;
+            color: var(--status-success-color);
+            text-align: center;
+            background-color: var(--status-bg-color);
+            padding: 5px;
+            border-radius: 4px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+        }
+        #status.error {
+            color: var(--status-error-color);
+        }
+        #boardsGrid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+            gap: 10px;
+            margin-top: 15px;
+        }
+        .board-block {
+            background-color: var(--board-block-bg); /* Semi-transparent white for blocks */
+            border-radius: 8px;
+            padding: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            min-height: 80px;
+            cursor: pointer;
+            font-weight: bold;
+            color: white;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
+            position: relative; /* For text positioning if needed */
+            z-index: 1; /* Ensure text is above background */
+        }
+        .board-block:hover {
+            transform: translateY(-2px);
+            background-color: var(--board-block-hover-bg);
+        }
+        .board-block.light-text {
+            color: #333;
+        }
+
+        /* Styles for lists and cards */
+        #trelloBoardsContainer, #trelloListsContainer {
+            position: relative; /* For positioning settings button */
+        }
+        #settingsBtn, #settingsBtnLists {
+            position: absolute;
+            top: 0px;
+            right: 10px;
+            width: auto;
+            padding: 5px 8px;
+            font-size: 1.2em;
+            background: none;
+            border: none;
+            color: inherit; /* Inherit color from mainContainer */
+            cursor: pointer;
+            z-index: 10; /* Ensure it's above other content */
+        }
+        #settingsBtn:hover, #settingsBtnLists:hover {
+            background-color: rgba(255,255,255,0.2);
+            border-radius: 4px;
+        }
+
+        #settingsContainer {
+            background-color: var(--main-bg-color); /* Inherit main background */
+            color: var(--text-color-dark-bg);
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: calc(100% - 20px); /* Adjust for padding */
+            height: calc(100% - 20px); /* Adjust for padding */
+            z-index: 100; /* Ensure it's on top */
+            display: none; /* Hidden by default */
+            box-sizing: border-box;
+        }
+        #settingsContainer h2 {
+            margin-top: 0;
+            color: inherit;
+        }
+        #settingsContainer button {
+            margin-bottom: 10px;
+            background-color: var(--button-primary-bg);
+        }
+        #settingsContainer button:hover {
+            background-color: var(--button-primary-hover-bg);
+        }
+
+        #listsGrid {
+            display: flex;
+            gap: 10px;
+            margin-top: 15px;
+            overflow-x: auto; /* Enable horizontal scrolling */
+            padding-bottom: 10px; /* Space for scrollbar */
+            align-items: flex-start; /* Align lists to the top */
+        }
+        .trello-list {
+            background-color: #ebecf0; /* Trello list background color */
+            border-radius: 3px;
+            padding: 8px;
+            min-width: 270px; /* Standard Trello list width */
+            max-width: 270px;
+            color: var(--text-color-light-bg);
+            box-shadow: 0 1px 0 rgba(9,30,66,.25);
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            flex-shrink: 0; /* Prevent lists from shrinking */
+            background-color: var(--list-bg-color);
+        }
+        .trello-list-title {
+            font-weight: bold;
+            font-size: 1.1em;
+            color: var(--text-color-light-bg);
+            margin-bottom: 5px;
+        }
+        .cards-container {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            flex-grow: 1; /* Allow cards container to grow */
+        }
+        .trello-card {
+            background-color: var(--card-bg-color);
+            border-radius: 3px;
+            padding: 8px;
+            box-shadow: 0 1px 0 rgba(9,30,66,.25);
+            cursor: grab;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 0.9em;
+            color: var(--text-color-light-bg);
+        }
+        .trello-card:hover {
+            background-color: var(--card-hover-bg-color);
+        }
+        .trello-card a {
+            text-decoration: none;
+            color: var(--text-color-light-bg);
+            flex-grow: 1;
+            margin-right: 5px;
+        }
+        .trello-card a:hover {
+            text-decoration: underline;
+        }
+        .delete-card-btn {
+            background-color: var(--delete-btn-bg); /* Red background */
+            border: none;
+            color: white; /* White text for contrast */
+            font-size: 0.9em; /* Smaller font size */
+            cursor: pointer;
+            width: 24px; /* Square button */
+            height: 24px; /* Square button */
+            border-radius: 3px; /* Slightly rounded corners */
+            display: flex; /* Use flex to center the 'x' */
+            align-items: center;
+            justify-content: center;
+            opacity: 0; /* Hidden by default */
+            transition: opacity 0.2s ease-in-out;
+        }
+        .trello-card:hover .delete-card-btn {
+            opacity: 1; /* Show on hover */
+        }
+        .delete-card-btn:hover {
+            background-color: var(--delete-btn-hover-bg); /* Darker red on hover */
+        }
+        .add-card-input {
+            width: calc(100% - 16px); /* Adjust for padding */
+            padding: 6px 8px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            font-size: 0.9em;
+            box-sizing: border-box;
+            background-color: var(--card-bg-color); /* Use theme variable */
+            color: var(--text-color-light-bg); /* Use theme variable */
+        }
+        .add-card-btn {
+            background-color: var(--add-btn-bg);
+            color: white;
+            border: none;
+            border-radius: 3px;
+            padding: 6px 12px;
+            cursor: pointer;
+            font-size: 0.9em;
+            margin-top: 5px;
+            width: 100%;
+        }
+        .add-card-btn:hover {
+            background-color: var(--add-btn-hover-bg);
+        }
+        .no-cards {
+            color: var(--text-color-light-bg);
+            font-style: italic;
+            text-align: center;
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div id="apiKeySection">
-        <h1>Trello API Key Configuration</h1>
-        <input type="text" id="apiKeyInput" placeholder="Enter Trello API Key">
-        <button id="saveKeyBtn">Save API Key</button>
-        <p id="status"></p>
-    </div>
-    <div id="trelloBoardsContainer" style="display: none;">
-        <h2>Your Trello Boards</h2>
-        <ul id="boardsList"></ul>
+    <div id="mainContainer">
+        <div id="apiKeySection">
+            <h1>Trello API Key Configuration</h1>
+            <input type="text" id="apiKeyInput" placeholder="Enter Trello API Key">
+            <button id="saveKeyBtn">Save API Key</button>
+            <p id="status"></p>
+        </div>
+        <div id="trelloBoardsContainer" style="display: none;">
+            <button id="settingsBtn" style="position: absolute; top: 10px; right: 10px; width: auto; padding: 5px 8px; font-size: 1.2em; background: none; border: none; color: inherit; cursor: pointer;">⚙️</button>
+            <h2>Your Trello Boards</h2>
+            <div id="boardsGrid"></div>
+        </div>
+        <div id="trelloListsContainer" style="display: none;">
+            <button id="backToBoardsBtn" style="width: auto; padding: 5px 10px; margin-bottom: 10px;">← Back to Boards</button>
+            <button id="settingsBtnLists" style="position: absolute; top: 10px; right: 10px; width: auto; padding: 5px 8px; font-size: 1.2em; background: none; border: none; color: inherit; cursor: pointer;">⚙️</button>
+            <h2 id="selectedBoardTitle"></h2>
+            <div id="listsGrid">
+                <!-- Trello lists will be rendered here -->
+            </div>
+        </div>
+        <div id="settingsContainer" style="display: none; padding: 10px; text-align: center;">
+            <h2>Settings</h2>
+            <p>Choose Theme:</p>
+            <button id="lightModeBtn" style="width: 48%; margin-right: 4%;">Light Mode</button>
+            <button id="darkModeBtn" style="width: 48%;">Dark Mode</button>
+            <button id="backFromSettingsBtn" style="margin-top: 15px; width: 100%;">← Back</button>
+        </div>
     </div>
     <script type="module" src="./popup.js"></script>
 </body>
